# reapk-cli

./: .gitignore  Cargo.toml  README.md  build.rs  debug_cert.crt  debug_key.pk8
.github/workflows/: build.yml
src/: easy_temp.rs  locate_executable.rs  main.rs  open_path.rs  scope_guard.rs  utils.rs
