[package]
name = "reapk-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
defer-lite = "1.0.0"
uuid = { version = "1.16.0", features = ["v7"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["consoleapi", "fileapi", "winbase", "processenv"] }
winreg = "0.55.0"

[build-dependencies]
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
